# vsag

./: .aci.yml  .clang-format  .gitignore  .package.aci.yml  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  OWNERS  README.md  VSAG_CODE_PROPOSAL.md  build_dependency.sh  docs-sync-plan.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml  fresh_ci_cache.commit
.github/workflows/: format.yml  release.yml
agent/: README.md  RESULTS_STAGE5.md  pyproject.toml
agent/spike/: RESULTS.md  spike.py  tools.py
agent/tests/: conftest.py  test_agent_loop.py  test_index_registry.py  test_registry.py  test_repl_render.py
agent/vsag_code/: __init__.py  __main__.py
agent/vsag_code/agent/: __init__.py  loop.py  prompts.py
agent/vsag_code/llm/: __init__.py  client.py
agent/vsag_code/rag/: __init__.py  cli.py  ingest.py  retrieve.py  store.py  tool.py
agent/vsag_code/tools/: __init__.py  dataset_tools.py  errors.py  index_tools.py  registry.py  registry_index.py
agent/vsag_code/tui/: __init__.py  repl.py
benchs/: bench_face5m.py  bench_hnsw.py  bench_random1m.cpp  csv_extract.py  run.py  run.yaml  utils.h  utils.py
benchs/benchmark/: bench_face5m.py  bench_hnsw.py  bench_index.py  bench_security.py  dataset.py  utils.py
cmake/: CheckSIMDCompilerFlag.cmake  GenerateVersionHeader.cmake
docker/: .build_dev_image.aci.yml  Dockerfile.tbase  pip.conf  requirements.txt
docs/docs/en/src/: SUMMARY.md
docs/docs/en/src/indexes/: brute_force.md  hgraph.md  ivf.md  pyramid.md
docs/docs/en/src/quantization/: README.md  fp16_bf16.md  fp32.md  pq.md  pqfs.md  rabitq.md  sq.md  sq_uniform.md
docs/docs/en/src/resources/: index_parameters.md
docs/docs/zh/src/: SUMMARY.md
docs/docs/zh/src/indexes/: brute_force.md  hgraph.md  ivf.md  pyramid.md
docs/docs/zh/src/quantization/: README.md  fp16_bf16.md  fp32.md  pq.md  pqfs.md  rabitq.md  sq.md  sq_uniform.md
docs/docs/zh/src/resources/: index_parameters.md
examples/cpp/: 109_index_sindi.cpp  CMakeLists.txt  custom_logger.cpp  custom_memory_allocator.cpp  example_conjugate_graph.cpp  example_diskann.cpp  example_fresh_hnsw.cpp  example_hnsw.cpp  example_kmeans.cpp  example_test.cpp  simple_hnsw.cpp
examples/python/: example_diskann.py  example_hnsw.py  example_vamana.py  proxy_test.py
include/vsag/: allocator.h  binaryset.h  bitmap.h  bitset.h  constants.h  dataset.h  errors.h  factory.h  index.h  logger.h  option.h  options.h  readerset.h  utils.h  vsag.h
mock/: CMakeLists.txt  example_simpleflat.cpp  simpleflat.cpp  simpleflat.h
mockimpl/: CMakeLists.txt  example_simpleflat.cpp  simpleflat.cpp
mockimpl/vsag/: factory.cpp  simpleflat.cpp  simpleflat.h
python/: binding.cpp
python_bindings/: binding.cpp
scripts/aci/: collect_cpp_coverage.sh
scripts/csv_extract/: csv_extract.py
scripts/format/: format-cpp.sh
scripts/misc/: ccache.sh
scripts/proxy/: proxy_test.py
src/: CMakeLists.txt  Clustering.cpp  Clustering.h  bitset_impl.cpp  bitset_impl.h  bitset_impl_test.cpp  clustering.cpp  clustering.h  common.h  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  default_allocator.cpp  default_allocator.h  default_allocator_test.cpp  default_logger.cpp  default_logger.h  default_logger_test.cpp  distances.cpp  factory.cpp  footer.cpp  footer.h  footer_test.cpp  logger.h  logger_test.cpp  option.cpp  option_test.cpp  options.cpp  options_test.cpp  parameter_check.cpp  parameter_generator.cpp  typing.h  utils.cpp  utils.h  vsag.cpp
src/algorithm/hnswlib/: algorithm_interface.h  bruteforce.h  hnswalg.h  hnswalg_static.h  hnswlib.h  space_ip.h  space_l2.h  visited_list_pool.h
src/algorithm/sindi/: sindi_test.cpp
src/conjugate_graph/: conjugate_graph.cpp  conjugate_graph.h  conjugate_graph_test.cpp
src/datacell/: sparse_term_datacell.cpp  sparse_term_datacell.h
src/factory/: create_index_parameters.h  factory.cpp  factory_test.cpp
src/impl/: conjugate_graph.cpp  conjugate_graph.h  conjugate_graph_test.cpp  label_table.h
src/index/: diskann.cpp  diskann.h  diskann_test.cpp  diskann_zparameters.cpp  diskann_zparameters.h  diskann_zparameters_test.cpp  hnsw.cpp  hnsw.h  hnsw_test.cpp  hnsw_zparameters.cpp  hnsw_zparameters.h  hnsw_zparameters_test.cpp  vamana.cpp  vamana.h
src/simd/: CMakeLists.txt  amx.cpp  avx.cpp  avx512.cpp  avx_test.cpp  generic.cpp  simd.cpp  simd.h  simd_status.h  simd_test.cpp  sse.cpp  sse_test.cpp
tests/: CMakeLists.txt  test_bitmap.cpp  test_bitset.cpp  test_cpuinfo.cpp  test_diskann.cpp  test_factory.cpp  test_hnsw.cpp  test_index.cpp  test_json.cpp  test_kmeans.cpp  test_log.cpp  test_multi_thread.cpp  test_option.cpp  test_options.cpp  test_random_index.cpp  test_simd.cpp  test_utils.cpp
tests/fixtures/: fixtures.cpp  fixtures.h
tests/performance/: README.md  test_performance.cpp
