#  Copyright 2024-present the vsag project
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vsag-code"
version = "0.1.0"
description = "Conversational TUI agent for VSAG (vector indexing library)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "the vsag project" },
]
keywords = ["vsag", "vector-search", "ann", "tui", "llm-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

# Runtime dependencies are intentionally tiny. The HTTP client is stdlib
# urllib (proven in the stage-1 spike). pyvsag, h5py, numpy are expected
# to be on PYTHONPATH by the dev-pod profile; declare them so a pip
# install on a clean host still works.
dependencies = [
    "h5py>=3.10",
    "numpy>=1.26",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=2.7",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "vsag-code[rag,test]",
]

[project.scripts]
vsag-code = "vsag_code.__main__:main"

[project.urls]
Homepage = "https://github.com/antgroup/vsag"
Repository = "https://github.com/antgroup/vsag"
Issues = "https://github.com/antgroup/vsag/issues"

[tool.hatch.build.targets.wheel]
packages = ["vsag_code"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vsag_code"]
